force-app/main/default/objects/AML__c/fields/AML_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>AML_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AML 18 Digit Id</label>
    <type>Text</type>
</CustomField>