force-app/main/default/objects/AML__c/fields/AML_Relationship_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>AML_Relationship_Contact_Name__c</fullName>
    <inlineHelpText>If Relationship is not Self , Please enter the Name.</inlineHelpText>
    <label>AML Relationship  Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>