force-app/main/default/objects/AML__c/fields/AML_Severity_Color__c.field-meta.xml
<CustomField>
    <fullName>AML_Severity_Color__c</fullName>
    <description>If AML Severity =High Then Display Red Color,
Else If AML Severity =Medium Then Display Orange Color,
Else If AML Severity =Low Then Display Green Color,</description>
    <formula>IF(  TEXT(AML_Severity__c)  = &apos;High Risk&apos;, IMAGE(&quot;https://htmlcolorcodes.com/assets/images/colors/red-color-solid-background-1920x1080.png&quot;, &quot;Red&quot; , 20,70 ),
IF( TEXT(AML_Severity__c)  =&apos;Medium Risk&apos;, IMAGE(&quot;https://htmlcolorcodes.com/assets/images/colors/orange-color-solid-background-1920x1080.png&quot;, &quot;Orange&quot; , 20,70),
IF( TEXT(AML_Severity__c)  =&apos;Low Risk&apos; ,IMAGE(&quot;https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg/1200px-Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg.png&quot;, &quot;Green&quot; , 20,70 ), &apos;&apos;) 



) )</formula>
    <inlineHelpText>Formula based on AML Severity</inlineHelpText>
    <label>AML Severity Color</label>
    <type>Text</type>
</CustomField>