force-app/main/default/objects/AML__c/fields/AML_Type__c.field-meta.xml
<CustomField>
    <fullName>AML_Type__c</fullName>
    <label>AML Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>