force-app/main/default/objects/AML__c/fields/Bank_Statement_upload__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statement_upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Statement upload</label>
    <type>Checkbox</type>
</CustomField>