force-app/main/default/objects/AML__c/fields/Beneficial_Owner_Country_of_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Country_of_Citizenship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficial Owner Country of Citizenship</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Country</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Beneficial Owner Country of Citizenship</relationshipLabel>
    <relationshipName>Beneficial_Owner_Country_of_Citizenships</relationshipName>
    <type>Lookup</type>
</CustomField>