force-app/main/default/objects/AML__c/fields/Business_Location__c.field-meta.xml
<CustomField>
    <fullName>Business_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business / Work Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Country</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Business / Work Location</relationshipLabel>
    <relationshipName>Business_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>