force-app/main/default/objects/AML__c/fields/Certificate_of_Incorporation_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Incorporation_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Incorporation uploaded</label>
    <type>Checkbox</type>
</CustomField>