force-app/main/default/objects/AML__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AMLS</relationshipLabel>
    <relationshipName>AMLS</relationshipName>
    <type>Lookup</type>
</CustomField>