force-app/main/default/objects/AML__c/fields/Conditional_Approved_Reason__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Approved_Reason__c</fullName>
    <label>Conditional Approved Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>