force-app/main/default/objects/AML__c/fields/Confirmation_of_registered_upload__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_registered_upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation of registered upload</label>
    <type>Checkbox</type>
</CustomField>