force-app/main/default/objects/AML__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AMLS</relationshipLabel>
    <relationshipName>AMLS</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>