force-app/main/default/objects/AML__c/fields/Convenyance_Status__c.field-meta.xml
<CustomField>
    <fullName>Convenyance_Status__c</fullName>
    <label>Convenyance Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>