force-app/main/default/objects/AML__c/fields/Convenyance_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Convenyance_Transfer_Date__c</fullName>
    <label>Convenyance Transfer Date</label>
    <type>Date</type>
</CustomField>