force-app/main/default/objects/AML__c/fields/Conveyance__c.field-meta.xml
<CustomField>
    <fullName>Conveyance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Conveyance__c</referenceTo>
    <relationshipLabel>AMLS</relationshipLabel>
    <relationshipName>AMLS</relationshipName>
    <type>Lookup</type>
</CustomField>