force-app/main/default/objects/AML__c/fields/Customer_s_Country_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Country_of_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer&apos;s Country of Registration</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Country</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Customer&apos;s Country of Registration</relationshipLabel>
    <relationshipName>Customer_s_Country_of_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>