force-app/main/default/objects/AML__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employment Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Employment Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Employment Type</relationshipLabel>
    <relationshipName>Employment_Types</relationshipName>
    <type>Lookup</type>
</CustomField>