force-app/main/default/objects/AML__c/fields/Financial_Information_Documents__c.field-meta.xml
<CustomField>
    <fullName>Financial_Information_Documents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Information Documents</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Financial Information Documents</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Financial Information Documents</relationshipLabel>
    <relationshipName>Financial_Information_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>