force-app/main/default/objects/AML__c/fields/Government_Correspondence_Upload__c.field-meta.xml
<CustomField>
    <fullName>Government_Correspondence_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government Correspondence Upload</label>
    <type>Checkbox</type>
</CustomField>