force-app/main/default/objects/AML__c/fields/Government_Issued_Photo_ID_upload__c.field-meta.xml
<CustomField>
    <fullName>Government_Issued_Photo_ID_upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government-Issued Photo ID upload</label>
    <type>Checkbox</type>
</CustomField>