force-app/main/default/objects/AML__c/fields/Identification_of_Beneficiaries__c.field-meta.xml
<CustomField>
    <fullName>Identification_of_Beneficiaries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identification of Beneficiaries</label>
    <type>Checkbox</type>
</CustomField>