force-app/main/default/objects/AML__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employment/Business Industry</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Industry(AML)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Employment/Business Industry</relationshipLabel>
    <relationshipName>Employment_Business_Industries</relationshipName>
    <type>Lookup</type>
</CustomField>