force-app/main/default/objects/AML__c/fields/Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Inquiry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Inquiry</label>
    <referenceTo>pba__Request__c</referenceTo>
    <relationshipLabel>AMLS</relationshipLabel>
    <relationshipName>AMLS</relationshipName>
    <type>Lookup</type>
</CustomField>