force-app/main/default/objects/AML__c/fields/Inquiry_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Record_Type__c</fullName>
    <formula>Inquiry__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry Record Type</label>
    <type>Text</type>
</CustomField>