force-app/main/default/objects/AML__c/fields/Inquiry_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Transaction_Type__c</fullName>
    <formula>Inquiry__r.Inquiry_Transaction_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry Transaction Type</label>
    <type>Text</type>
</CustomField>