force-app/main/default/objects/AML__c/fields/Is_PV_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_PV_Primary__c</fullName>
    <formula>IF(AND(Contact__c = Property_Valuation__r.Contact__c, NOT(ISNULL(Contact__c)), NOT(ISNULL(Property_Valuation__r.Contact__c))), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PV Primary?</label>
    <type>Checkbox</type>
</CustomField>