force-app/main/default/objects/AML__c/fields/Is_Status_have_KYC__c.field-meta.xml
<CustomField>
    <fullName>Is_Status_have_KYC__c</fullName>
    <description>IF aml status have atleast anyone KYC value.</description>
    <formula>OR( 
ISPICKVAL( Status__c , &apos;KYC Pending&apos;) ,
ISPICKVAL( Status__c , &apos;KYC Submitted&apos;) , 
ISPICKVAL( Status__c , &apos;KYC Approved&apos;) , 
ISPICKVAL( Status__c , &apos;KYC Rejected&apos;) , 
ISPICKVAL( Status__c , &apos;KYC Completed&apos;)
)</formula>
    <label>Is Status have KYC ?</label>
    <type>Checkbox</type>
</CustomField>