force-app/main/default/objects/AML__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>pba__Listing__c</referenceTo>
    <relationshipLabel>AMLS</relationshipLabel>
    <relationshipName>AMLS</relationshipName>
    <type>Lookup</type>
</CustomField>