force-app/main/default/objects/AML__c/fields/Memorandum_Articles_of_Assoc_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Memorandum_Articles_of_Assoc_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Memorandum &amp; Articles of Assoc uploaded</label>
    <type>Checkbox</type>
</CustomField>