force-app/main/default/objects/AML__c/fields/Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mode of Payment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Mode of Payment</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Mode of Payment</relationshipLabel>
    <relationshipName>Mode_of_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>