force-app/main/default/objects/AML__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nationality</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Country</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Nationality</relationshipLabel>
    <relationshipName>Nationalities</relationshipName>
    <type>Lookup</type>
</CustomField>