force-app/main/default/objects/AML__c/fields/Other_businesses_of_the_client__c.field-meta.xml
<CustomField>
    <fullName>Other_businesses_of_the_client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other businesses of the client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Other Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Other businesses of the client</relationshipLabel>
    <relationshipName>Other_business_of_the_clients</relationshipName>
    <type>Lookup</type>
</CustomField>