force-app/main/default/objects/AML__c/fields/Property_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Property_Valuation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Valuation</label>
    <referenceTo>Property_Valuation__c</referenceTo>
    <relationshipLabel>AMLS</relationshipLabel>
    <relationshipName>AMLS</relationshipName>
    <type>Lookup</type>
</CustomField>