force-app/main/default/objects/AML__c/fields/PV_Address__c.field-meta.xml
<CustomField>
    <fullName>PV_Address__c</fullName>
    <formula>Property_Valuation__r.Address__c</formula>
    <label>PV Address</label>
    <type>Text</type>
</CustomField>