force-app/main/default/objects/AML__c/fields/Register_of_Directors_upload__c.field-meta.xml
<CustomField>
    <fullName>Register_of_Directors_upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Register of Directors upload</label>
    <type>Checkbox</type>
</CustomField>