force-app/main/default/objects/AML__c/fields/Register_of_Shareholders__c.field-meta.xml
<CustomField>
    <fullName>Register_of_Shareholders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Register of Shareholders</label>
    <type>Checkbox</type>
</CustomField>