force-app/main/default/objects/AML__c/fields/Rejected_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason_Details__c</fullName>
    <label>Rejected Reason Details</label>
    <type>TextArea</type>
</CustomField>