force-app/main/default/objects/AML__c/fields/Related_Inquiry_Link__c.field-meta.xml
<CustomField>
    <fullName>Related_Inquiry_Link__c</fullName>
    <formula>IF(
   NOT(ISBLANK( Inquiry__c )),
   &quot;https://gulfsothebysinternational.lightning.force.com/lightning/r/pba__Request__c/&quot; &amp; Inquiry__c &amp; &quot;/view&quot;,
   &quot;https://gulfsothebysinternational.lightning.force.com/lightning/r/AML__c/&quot; &amp; Id &amp; &quot;/view&quot;
)</formula>
    <label>Related Inquiry Link</label>
    <type>Text</type>
</CustomField>