force-app/main/default/objects/AML__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <inlineHelpText>Choose Self If its for Primary Contact else choose other values</inlineHelpText>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Relationship</valueSetName>
    </valueSet>
</CustomField>