force-app/main/default/objects/AML__c/fields/Screening_Shareholder__c.field-meta.xml
<CustomField>
    <fullName>Screening_Shareholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Screening/ Shareholder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>PEP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Screening/ Shareholder</relationshipLabel>
    <relationshipName>Screening_Shareholders</relationshipName>
    <type>Lookup</type>
</CustomField>