force-app/main/default/objects/AML__c/fields/Second_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Second_Nationality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>AML Parameter Lookup Field</inlineHelpText>
    <label>Second Nationality</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Country</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Second Nationality</relationshipLabel>
    <relationshipName>Second_Nationalities</relationshipName>
    <type>Lookup</type>
</CustomField>