force-app/main/default/objects/AML__c/fields/Seller_Id_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Seller_Id_Expiry_Date__c</fullName>
    <label>Seller Id Expiry Date</label>
    <type>Date</type>
</CustomField>