force-app/main/default/objects/AML__c/fields/Source_of_Fund_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Fund_Wealth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source of Fund / Wealth</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Source Of Fund</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Source of Fund / Wealth</relationshipLabel>
    <relationshipName>Source_of_Fund_Wealths</relationshipName>
    <type>Lookup</type>
</CustomField>