force-app/main/default/objects/AML__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>AML Rejected</fullName>
            </value>
            <value>
                <fullName>KYC Pending</fullName>
            </value>
            <value>
                <fullName>KYC Submitted</fullName>
            </value>
            <value>
                <fullName>KYC Approved</fullName>
            </value>
            <value>
                <fullName>KYC Rejected</fullName>
            </value>
            <value>
                <fullName>KYC Completed</fullName>
            </value>
            <value>
                <fullName>Compliance Review</fullName>
            </value>
            <value>
                <fullName>Document  Pending</fullName>
            </value>
            <value>
                <fullName>AML Complete</fullName>
            </value>
            <value>
                <fullName>TOB Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Conditional_Approved</fullName>
                <isActive>false</isActive>
                <label>Conditional Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>