force-app/main/default/objects/AML__c/fields/Total_Score_Without_Weightage_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Score_Without_Weightage_New__c</fullName>
    <label>Total Score Without Weightage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>