force-app/main/default/objects/AML__c/fields/Total_Weighted_Score_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Weighted_Score_New__c</fullName>
    <label>Total Weighted Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>