force-app/main/default/objects/AML__c/fields/Upload_Contact_Resident__c.field-meta.xml
<CustomField>
    <fullName>Upload_Contact_Resident__c</fullName>
    <label>Upload Contact Resident?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>