force-app/main/default/objects/AML__c/fields/Upload_EID__c.field-meta.xml
<CustomField>
    <fullName>Upload_EID__c</fullName>
    <label>Upload EID?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>