force-app/main/default/objects/AML__c/fields/Upload_KYC_Signed__c.field-meta.xml
<CustomField>
    <fullName>Upload_KYC_Signed__c</fullName>
    <label>Upload KYC Signed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>