force-app/main/default/objects/AML__c/fields/Upload_Source_of_Fund__c.field-meta.xml
<CustomField>
    <fullName>Upload_Source_of_Fund__c</fullName>
    <label>Upload Source of Fund?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>