force-app/main/default/objects/AML__c/fields/Utility_Bills_upload__c.field-meta.xml
<CustomField>
    <fullName>Utility_Bills_upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utility Bills upload</label>
    <type>Checkbox</type>
</CustomField>