force-app/main/default/objects/AML__c/fields/Year_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Establishment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year of Establishment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AML_Parameter__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Year of Establishment</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AML_Parameter__c</referenceTo>
    <relationshipLabel>Year of Establishment</relationshipLabel>
    <relationshipName>Year_of_Establishments</relationshipName>
    <type>Lookup</type>
</CustomField>