force-app/main/default/objects/AML__c/validationRules/AML_Approved_or_Rejected_Status_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>AML_Approved_or_Rejected_Status_Lock</fullName>
    <active>false</active>
    <description>Once  Approved or Rejected then Can not change Status to anything else.</description>
    <errorConditionFormula>AND(
    OR(
        (ISPICKVAL(PRIORVALUE(Status__c), &apos;Approved&apos;)),
        (ISPICKVAL(PRIORVALUE(Status__c), &apos;Rejected&apos;))
    ),
    RecordType.Name = &apos;UK&apos;,
    ISCHANGED(Status__c)
)</errorConditionFormula>
    <errorMessage>AML Status is Approved or Rejected - Status can&apos;t be changed</errorMessage>
</ValidationRule>